<resources>
    <string name="app_name">Laporaja</string>
    <!-- menu -->
    <string name="title_home">Beranda</string>
    <string name="title_history">Riwayat</string>
    <string name="title_profile">Profilmu</string>
    <string name="title_camera">Kamera</string>

    <!-- camera-->
    <string name="cameraTitle">Buat laporan baru</string>
    <string name="subHedingCamera">Ambil Gambar Kerusakan</string>
    <string name="info">Ambil gambar kerusakan jalan dengan memastikan kerusakan yang dimaksud didalam frame.</string>

    <!-- post-->
    <string name="kirim">Kirim</string>
    <string name="notes">Catatan</string>

    <!-- home text -->
    <string name="hello_string">Halo, %1$s!</string>
    <string name="laporan">Laporan</string>
    <string name="dummy_value">10</string>
    <string name="laporan_btn">Buat Laporan</string>
    <string name="history_laporan">Laporan Terbaru</string>

    <!-- History-->
    <string name="laporan_anda">Semua Laporan</string>
    <string name="dummy_id">#1022</string>
    <string name="id_laporan">#%1$s</string>
    <string name="lokasi">Lokasi</string>
    <string name="dummy_location">Cikarang, Jawa Barat</string>
    <string name="report_picture">report_picture</string>

    <!-- user-->
    <string name="name">Nama</string>
    <string name="email">email@gmail.com</string>
    <string name="logOut">Logout</string>

    <!-- fragment -->
    <string name="settings">pengaturan</string>
    <string name="exit_confirmation">Tekan lagi untuk keluar aplikasi</string>
    <string name="tidak_ditemukan">Tidak ditemukan.</string>
    <string name="detail_laporan">Detail Laporan</string>
    <string name="catatan_tambahan">Catatan Tambahan</string>
    <string name="id_laporan_title">ID Laporan</string>

    <!-- LOREM IPSUM -->
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed eu arcu vel enim vehicula congue. Phasellus a convallis ante, sit amet mattis nulla. Cras malesuada feugiat lorem id malesuada. In orci est, tristique quis malesuada sit amet, vulputate sed nunc. Donec eget tortor sem. Sed eu pharetra justo, at porttitor lacus. In fringilla suscipit ligula, ac eleifend lorem volutpat quis. Maecenas laoreet, ex nec viverra tempus, lectus nulla fringilla purus, sed venenatis diam arcu at leo.
    </string>
    <string name="tingkat_keparahan">Tingkat Keparahan</string>
    <string name="dummy_tingkat_keparahan">Very Poor</string>
    <string name="tanggal_dibuat">Tanggal Dibuat</string>
    <string name="dummy_date">2021–06–01</string>
    <string name="image_detail">image_detail</string>
    <string name="detail_title">Detail laporan #%1$s</string>
    <string name="mengirim_data">Mengirim Data</string>

    <!-- Setting -->
    <string name="title_activity_settings">Pengaturan</string>
    <string name="language">Bahasa</string>
    <string name="language_change_desc">Pilih bahasa sistem</string>
    <string name="language_option">Pilihan Bahasa</string>
    <string name="settings_header">Pengaturan</string>
    <string name="laporanmu">Laporanmu</string>
    <string name="nama_user">Pengguna</string>
    <string name="logout_header">Logout</string>
    <string name="logout_confirm">Yakin ingin logout?</string>
    <string name="logout_yes">Ya</string>
    <string name="logout_no">Tidak</string>
    <string name="error_cloud">Data gagal dikirim ke server. Cek kembali koneksi anda. Error: Koneksi cloud gagal.</string>
    <string name="error_ml">Data gagal dikirim ke server. Cek kembali koneksi anda. Error: Prediction gagal</string>
    <string name="welcome_message">Selamat datang, %1$s</string>
    <string name="login_failed">Login gagal</string>
    <string name="logout_success">Berhasil logout</string>
</resources>