<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.bangkit.laporaja.views.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.bangkit.laporaja.views.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.bangkit.laporaja.views.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.bangkit.laporaja.views.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera"/>

</navigation>